fix hero btn column gap between icon and name

--- a/css/queries.css
+++ b/css/queries.css
@@ -412,7 +412,7 @@
     }
 
     .btn--options-container {
-      column-gap: 0;
+      column-gap: 1 !important;
     }
 
     .container-options {
